Fix table label color on mobile

--- a/source/assets/stylesheets/scss/overrides/_table.scss
+++ b/source/assets/stylesheets/scss/overrides/_table.scss
@@ -100,6 +100,7 @@
 
       &:before {
         content: attr(data-info);
+        color: color(neutrals, tone-70) !important;
         font-weight: 600;
         text-align: left;
       }
